syntax = "proto3";
package imversed.verse;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "verse/genesis.proto";
import "verse/verse.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/imversed/imversed/x/verse/types";

// Query defines the gRPC querier service.
service Query {
  // Queries a verse by index.
  rpc Verse(QueryGetVerseRequest) returns (QueryGetVerseResponse) {
    option (google.api.http).get = "/imversed/imversed/verse/verse/{name}";
  }

  // Queries all verses.
  rpc VerseAll(QueryAllVerseRequest) returns (QueryAllVerseResponse) {
    option (google.api.http).get = "/imversed/imversed/verse/verse";
  }

  // Queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/imversed/imversed/verse/params";
  }

  // this line is used by starport scaffolding # 2
}

message QueryGetVerseRequest {
  string name = 1;

}

message QueryGetVerseResponse {
  Verse verse = 1 [(gogoproto.nullable) = false];
}

message QueryAllVerseRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllVerseResponse {
  repeated Verse verse = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3